--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "react-helmet": "^6.0.0"
   },
   "peerDependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
