--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,3 @@
 # [lock-all/] 🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫🚫
-
-# Directories to ignore
-.cache
-node_modules
-public
-# Don't ignore (prefix with !)
+github: justinmahar
+custom: https://www.paypal.com/paypalme/thejustinmahar/5
