--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-super-seo",
   "version": "1.0.7",
+  "coreVersion": "2.4.8",
   "author": "Justin Mahar <contact@justinmahar.com>",
   "description": "The React SEO component that handles metadata so you don't have to. Supports Google, OpenGraph, Twitter, and beyond. 🚀",
   "homepage": "https://justinmahar.github.io/react-super-seo/",
@@ -8,23 +9,14 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "watch": "tsc --watch",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix",
+    "test": "npm run build",
     "start": "npm run storybook",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "predeploy": "npm run docz:build",
-    "deploy": "gh-pages -d .docz/dist",
     "preship": "npm run build && git add dist && git diff-index --quiet HEAD || git commit -m \"Build, version, and publish.\" && npm version patch -m \"Build, version, and publish.\"",
     "ship": "npm publish --access public",
     "postship": "git push",
-    "docz": "npm run docz:clean && npm run docz:dev",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build",
-    "docz:serve": "docz build && docz serve",
-    "docz:clean": "rm -rf .docz/.cache"
+    "update": "rm -rf .lockblocks && git clone -q git@github.com:justinmahar/react-kindling.git ./.lockblocks && lockblocks ./.lockblocks . --verbose && rm -rf .lockblocks && echo '' && echo ' → Be sure to run `npm i` to install new dependencies.' && echo ''"
   },
   "license": "MIT",
   "repository": {
@@ -34,46 +26,58 @@
   "bugs": {
     "url": "https://github.com/justinmahar/react-super-seo/issues"
   },
-  "keywords": [],
-  "dependencies": {
-    "react-helmet": "^6.0.0"
-  },
+  "keywords": [
+    "react",
+    "seo",
+    "search",
+    "engine",
+    "optimization",
+    "meta",
+    "metadata",
+    "google",
+    "opengraph",
+    "twitter",
+    "card",
+    "cards",
+    "helmet",
+    "schema",
+    "semantic",
+    "tags"
+  ],
   "peerDependencies": {
-    "react": ">=16",
-    "react-dom": ">=16"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0 || ^20.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0 || ^20.0.0"
+  },
+  "dependencies": {
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@storybook/addons": "^5.3.17",
-    "@storybook/preset-typescript": "^2.1.0",
-    "@storybook/react": "^5.3.17",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.0",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-helmet": "^5.0.15",
-    "@types/webpack": "^4.41.12",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "babel-loader": "^8.0.6",
-    "docz": "^2.3.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^2.2.0",
-    "jest": "^25.1.0",
-    "prettier": "^2.2.1",
-    "react-ga": "^2.7.0",
-    "react-test-renderer": "^16.13.0",
-    "react-use-window-scroll": "^1.0.10",
-    "styled-components": "^5.2.1",
-    "ts-jest": "^25.2.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3"
+    "@babel/core": "^7.20.12",
+    "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@types/react-helmet": "^6.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "babel-loader": "^9.1.2",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.10",
+    "lockblocks": "^1.1.1",
+    "prettier": "^2.8.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-html-props": "^1.0.32",
+    "react-markdown": "^8.0.3",
+    "replace-in-file": "^6.3.5",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0"
   }
 }
